# fivetran-tests

./: .gitignore  Cargo.toml  fivetran_openapi_v1.json  flake.nix  gel.toml  justfile
.github/workflows/: test.yml
dbschema/: default.gel  setup.edgeql
src/: fivetran.rs  main.rs  postgres.rs
