[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
gel-auth = { git = "https://github.com/geldata/gel-rust.git", version = "0.1.6" }
gel-pg-captive = { git = "https://github.com/geldata/gel-rust.git", version = "0.1.1" }
gel-captive = { git = "https://github.com/geldata/gel-rust.git", version = "0.1.0" }
tokio = { version = "1.45.1", features = ["macros", "rt", "signal", "time"] }
clap = { version = "4.5.40", features = ["derive"] }
bore-cli = "0.6.0"

# Fivetran
reqwest = { version = "0.12", features = [
    "http2",
    "charset",
    "system-proxy",
    "json",
    "rustls-tls",
], default-features = false }
chrono = "0.4.41"
serde = "1.0.219"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"
serde_repr = "0.1.20"
tokio-postgres = "0.7.13"
postgres-openssl = "0.5.1"
openssl = "0.10.73"
